@@ -1,3 +1,3 @@
-/UpdataConfig.dat;http.referer=added1;tags=firstmatch
+/UpdataConfig.dat;http.request.referer=added1;tags=firstmatch
 /x/xx/xxxxxxxxxxxxxxxxxxx/x/xxxxxx/xxxxxxxxxxxxxxx;http.user-agent=added2;tags=secondmatch
 
