@@ -1,3 +1,3 @@
-samples.example.com/UpdataConfig.dat;http.referer=added1wise;tags=firstmatchwise
+samples.example.com/UpdataConfig.dat;http.request.referer=added1wise;tags=firstmatchwise
 xxxxx.xxxxxxxx.xxxxxxxxxx.xxx/x/xx/xxxxxxxxxxxxxxxxxxx/x/xxxxxx/xxxxxxxxxxxxxxx;http.user-agent=added2wise;tags=secondmatchwise
 
